k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-registration-app
  namespace: user-register
  labels:
    app: user-registration-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-registration-app
  template:
    metadata:
      labels:
        app: user-registration-app
    spec:
      containers:
      - name: user-registration-app
        image: USER_REGISTRATION_APP_IMAGE
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 5
